--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-bc1c90b5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-6a03d4d7.js">
+		<link rel="modulepreload" href="./_app/immutable/start-351e3afe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-6738d5d5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-8c1c4e73.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4904e76a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8c4810ff.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-db74aed3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c14b6e90.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-4b2dd576.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-fd4ba60d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-c7e117c8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-c93588f5.js">
-		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-5abe8e84.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-a39b422d.js">
+		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-0d274893.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-6c04290b.js">
 		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-9ae4a771.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-c9862749.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-31d24f85.js">
@@ -195,7 +195,7 @@
 
 
 
-<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/david-stancel"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/david-stancel-web.jpg)"></div>
+<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/david-stancel"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/david-stancel-web.webp)"></div>
             <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/david-stancel-twitter.jpg)"></div></div></div></div></a>
     <div class="mt-4 text-sm text-custom-darkpurple uppercase font-bold"><a href="/lide/david-stancel">David Stancel</a>
       🇸🇰</div>
@@ -366,7 +366,7 @@
 
 
 
-<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/roman-valihrach"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-web.png)"></div>
+<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/roman-valihrach"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-web.webp)"></div>
             <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/roman-valihrach-twitter.jpg)"></div></div></div></div></a>
     <div class="mt-4 text-sm text-custom-darkpurple uppercase font-bold"><a href="/lide/roman-valihrach">Roman Valihrach</a>
       🇨🇿</div>
@@ -404,7 +404,7 @@
 
 
 
-<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/vladimir-pinker"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vladimir-pinker-web.jpg)"></div>
+<div class="w-44 sm:w-44 text-center pb-4"><a href="/lide/vladimir-pinker"><div class="h-44"><div class="flip-card"><div class="flip-card-inner"><div class="flip-card-front bg-cover bg-center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vladimir-pinker-web.webp)"></div>
             <div class="flip-card-back bg-cover bg=center rounded-2xl" style="background-image: url(https://spec.utxo.cz/23/photos/speakers/vladimir-pinker-twitter.jpg)"></div></div></div></div></a>
     <div class="mt-4 text-sm text-custom-darkpurple uppercase font-bold"><a href="/lide/vladimir-pinker">Vladimír Pinker  (KryptoVláďa)</a>
       🇨🇿</div>
@@ -428,7 +428,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-olbrecht-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Olbrecht"></div>
 
 
 
@@ -441,7 +441,46 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-duhonsky-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Duhonský"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/milan-marcak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Marcak"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dalibor-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dalibor Černý"></div>
 
 
 
@@ -467,7 +506,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/anna-pichova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Anna Píchová"></div>
 
 
 
@@ -480,7 +519,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
 
 
 
@@ -493,72 +532,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/sodomak-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Milan Půlkrábek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.png" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ivo-cechman-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ivo Čechman"></div>
 
 
 
@@ -584,20 +558,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-duhonsky-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Duhonský"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-kracik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Kracík"></div>
 
 
 
@@ -623,7 +584,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/dominika-v-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Dominika V"></div>
 
 
 
@@ -636,7 +597,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/pablo-cz-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="PabloCZ"></div>
 
 
 
@@ -649,7 +610,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
 
 
 
@@ -662,7 +623,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/nikola-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Nikola"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jana-kubatova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Jana Kubátová"></div>
 
 
 
@@ -675,7 +636,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/samuela-davidova-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Samuela Davidova"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-etheri-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Tereza"></div>
 
 
 
@@ -701,7 +675,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-pilny-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Pilný"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -727,7 +714,46 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/damsky-web.png" class="w-16 h-16 rounded-lg m-auto" alt="damsky"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/lc-young-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="LC Young"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-matejka-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Martin Matejka"></div>
 
 
 
@@ -741,32 +767,6 @@
 
 
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/antonin-jilek-web.webp" class="w-16 h-16 rounded-lg m-auto" alt="Antonín Jílek"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-tesar-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Tesař"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
 
 
 
@@ -1108,14 +1108,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1j3hw2v">
-			import { start } from "./_app/immutable/start-6a03d4d7.js";
+		<script type="module" data-sveltekit-hydrate="1rk4rco">
+			import { start } from "./_app/immutable/start-351e3afe.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1j3hw2v"]').parentNode,
-				version: "1684548565600",
+				target: document.querySelector('[data-sveltekit-hydrate="1rk4rco"]').parentNode,
+				version: "1684612601976",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
